fixed project title spacing

--- a/style.css
+++ b/style.css
@@ -151,8 +151,8 @@ p.para {
   font: normal bold 49px/60px;
   font-family: "Nunito", serif;
   letter-spacing: 5px;
-  margin-top: 8%;
-  margin-bottom: 5%;
+  margin-top: 4rem;
+  margin-bottom: 2rem;
 }
 #projectImg {
   width: 538px;
@@ -171,7 +171,7 @@ p.para {
 
 /* footer begins */
 .contact-title {
-  margin-top: 5rem;
+  margin-top: 3rem;
   margin-left: 9rem;
   color: #353535;
   display: block;
